# OpenGothicStarter

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.githooks/: pre-commit
.github/workflows/: build.yml
cmake/: embed_binary_to_cpp.cmake
i18n/: opengothicstarter.pot
i18n/de/LC_MESSAGES/: opengothicstarter.po
i18n/en/LC_MESSAGES/: opengothicstarter.po
scripts/: bundle_windows_runtime_dlls.ps1  check_i18n.sh  check_pot_sync.sh  format.sh  tidy.sh  update_po.sh  update_pot.sh  verify.sh
src/: app.cpp  app.h  embedded_locales.cpp  embedded_locales.h  localization.cpp  localization.h  main.cpp  pe_icon_loader.cpp  pe_icon_loader.h  runtime_paths.cpp  runtime_paths.h  settings_dialog.cpp  settings_dialog.h
